cabal-version:  3.8
name:           singletons-base-code-generator
version:        0.1
synopsis:       Code generator for the singletons-base test suite
homepage:       http://www.github.com/goldfirere/singletons
category:       Dependent Types
author:         Ryan Scott <ryan.gl.scott@gmail.com>
maintainer:     Ryan Scott <ryan.gl.scott@gmail.com>
bug-reports:    https://github.com/goldfirere/singletons/issues
stability:      experimental
tested-with:    GHC == 9.4.1
extra-source-files: README.md
                    CHANGES.md
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
description:
    TODO RGS: Docs

source-repository this
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base-code-generator
  tag:      v0.1

source-repository head
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base-code-generator
  branch:   master

executable singletons-base-code-generator
  hs-source-dirs:     src
  ghc-options:        -Wall -Wcompat -threaded
  default-language:   GHC2021
  main-is:            SingletonsBaseCodeGenerator.hs
  build-depends:      base >= 4.17 && < 4.18,
                      directory >= 1.2,
                      filepath >= 1.3
