cabal-version:  3.8
name:           singletons-base-code-generator
version:        0.1
synopsis:       Code generator for the singletons-base test suite
homepage:       http://www.github.com/goldfirere/singletons
category:       Dependent Types
author:         Ryan Scott <ryan.gl.scott@gmail.com>
maintainer:     Ryan Scott <ryan.gl.scott@gmail.com>
bug-reports:    https://github.com/goldfirere/singletons/issues
stability:      experimental
tested-with:    GHC == 9.14.1
extra-doc-files:    CHANGES.md
extra-source-files: README.md
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
description:
    A [@cabal@ code
    generator](https://cabal.readthedocs.io/en/stable/cabal-package-description-file.html#pkg-field-test-suite-code-generators)
    used in the test suite for the
    [@singletons-base@](https://hackage.haskell.org/package/singletons-base)
    library.

source-repository this
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base-code-generator
  tag:      v0.1

source-repository head
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base-code-generator
  branch:   master

executable singletons-base-code-generator
  hs-source-dirs:     src
  ghc-options:        -Wall -Wcompat -threaded
  default-language:   GHC2021
  main-is:            SingletonsBaseCodeGenerator.hs
  build-depends:      base >= 4.22 && < 4.23,
                      directory >= 1.2 && < 1.4,
                      filepath >= 1.3 && < 1.6
