name:           singletons-base
version:        3.0
cabal-version:  >= 1.24
synopsis:       A promoted and singled version of the base library
homepage:       http://www.github.com/goldfirere/singletons
category:       Dependent Types
author:         Richard Eisenberg <rae@cs.brynmawr.edu>, Jan Stolarek <jan.stolarek@p.lodz.pl>
maintainer:     Ryan Scott <ryan.gl.scott@gmail.com>
bug-reports:    https://github.com/goldfirere/singletons/issues
stability:      experimental
tested-with:    GHC == 8.10.1
extra-source-files: README.md, CHANGES.md, tests/README.md,
                    tests/compile-and-dump/GradingClient/*.hs,
                    tests/compile-and-dump/InsertionSort/*.hs,
                    tests/compile-and-dump/Promote/*.hs,
                    tests/compile-and-dump/Singletons/*.hs
                    tests/compile-and-dump/GradingClient/*.golden,
                    tests/compile-and-dump/InsertionSort/*.golden,
                    tests/compile-and-dump/Promote/*.golden,
                    tests/compile-and-dump/Singletons/*.golden
license:        BSD3
license-file:   LICENSE
build-type:     Custom
description:
    @singletons-base@ uses @singletons-th@ to define promoted and singled
    functions from the @base@ library, including the "Prelude". This library was
    originally presented in /Dependently Typed Programming with Singletons/,
    published at the Haskell Symposium, 2012.
    (<https://cs.brynmawr.edu/~rae/papers/2012/singletons/paper.pdf>)
    See also the paper published at Haskell Symposium, 2014, which describes
    how promotion works in greater detail:
    <https://cs.brynmawr.edu/~rae/papers/2014/promotion/promotion.pdf>.
    .
    WARNING: @singletons-base@ defines orphan instances for @Sing@, @SingKind@,
    etc. for common types such as @Bool@, @[]@, @Maybe@, etc. If you define
    instances of these types in your code, you will likely not be able to use
    that code with @singletons-base@.
    .
    @singletons-base@ uses code that relies on bleeding-edge GHC language
    extensions. As such, @singletons-base@ only supports the latest major version
    of GHC (currently GHC 8.10). For more information,
    consult the @singletons@
    @<https://github.com/goldfirere/singletons/blob/master/README.md README>@.
    .
    You may also be interested in the following related libraries:
    .
    * The @singletons@ library is a small, foundational library that defines
      basic singleton-related types and definitions.
    .
    * The @singletons-th@ library defines Template Haskell functionality that
      allows /promotion/ of term-level functions to type-level equivalents and
      /singling/ functions to dependently typed equivalents.

source-repository this
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base
  tag:      v3.0

source-repository head
  type:     git
  location: https://github.com/goldfirere/singletons.git
  subdir:   singletons-base
  branch:   master

custom-setup
  setup-depends:
    base      >= 4.14 && < 4.15,
    Cabal     >= 3.0 && < 3.3,
    directory >= 1,
    filepath  >= 1.3

library
  hs-source-dirs:     src
  build-depends:      base             >= 4.14 && < 4.15,
                      pretty,
                      singletons       == 3.0.*,
                      singletons-th    == 3.0.*,
                      template-haskell >= 2.16 && < 2.17,
                      text >= 1.2,
                      th-desugar       >= 1.12 && < 1.13
  default-language:   Haskell2010
  other-extensions:   TemplateHaskell
  exposed-modules:    Data.Singletons.Prelude
                      Data.Singletons.Prelude.Applicative
                      Data.Singletons.Prelude.Base
                      Data.Singletons.Prelude.Bool
                      Data.Singletons.Prelude.Const
                      Data.Singletons.Prelude.CustomStar
                      Data.Singletons.Prelude.Either
                      Data.Singletons.Prelude.Enum
                      Data.Singletons.Prelude.Eq
                      Data.Singletons.Prelude.Foldable
                      Data.Singletons.Prelude.Function
                      Data.Singletons.Prelude.Functor
                      Data.Singletons.Prelude.Identity
                      Data.Singletons.Prelude.IsString
                      Data.Singletons.Prelude.Ord
                      Data.Singletons.Prelude.List
                      Data.Singletons.Prelude.List.NonEmpty
                      Data.Singletons.Prelude.Maybe
                      Data.Singletons.Prelude.Monad
                      Data.Singletons.Prelude.Monad.Fail
                      Data.Singletons.Prelude.Monad.Zip
                      Data.Singletons.Prelude.Monoid
                      Data.Singletons.Prelude.Num
                      Data.Singletons.Prelude.Proxy
                      Data.Singletons.Prelude.Semigroup
                      Data.Singletons.Prelude.Show
                      Data.Singletons.Prelude.SomeSing
                      Data.Singletons.Prelude.TH
                      Data.Singletons.Prelude.Traversable
                      Data.Singletons.Prelude.Tuple
                      Data.Singletons.Prelude.Void
                      Data.Singletons.TypeError
                      Data.Singletons.TypeLits
                      Data.Singletons.TypeRepTYPE

  -- singletons re-exports
  reexported-modules: Data.Singletons
                    , Data.Singletons.Decide
                    , Data.Singletons.ShowSing
                    , Data.Singletons.Sigma

  -- singletons-th re-exports
  reexported-modules: Data.Singletons.CustomStar
                    , Data.Singletons.SuppressUnusedWarnings
                    , Data.Singletons.TH
                    , Data.Singletons.TH.Options

  other-modules:      Data.Singletons.Prelude.Instances
                      Data.Singletons.Prelude.List.Internal
                      Data.Singletons.Prelude.List.Internal.Disambiguation
                      Data.Singletons.Prelude.Monad.Internal
                      Data.Singletons.Prelude.Ord.Disambiguation
                      Data.Singletons.Prelude.Semigroup.Internal
                      Data.Singletons.Prelude.Semigroup.Internal.Disambiguation
                      Data.Singletons.Prelude.Util
                      Data.Singletons.TypeLits.Internal

  ghc-options:        -Wall -Wcompat -Wno-redundant-constraints

test-suite singletons-base-test-suite
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  ghc-options:        -Wall -Wcompat -threaded -with-rtsopts=-maxN16
  default-language:   Haskell2010
  main-is:            SingletonsBaseTestSuite.hs
  other-modules:      SingletonsBaseTestSuiteUtils

  build-depends:      base >= 4.14 && < 4.15,
                      bytestring >= 0.10.9,
                      deepseq >= 1.4.4,
                      filepath >= 1.3,
                      process >= 1.1,
                      turtle >= 1.5,
                      text >= 1.2,
                      singletons-base,
                      tasty >= 1.2,
                      tasty-golden >= 2.2
